fix: annoying pixel gap

--- a/frontend/styles/components/tool/map.scss
+++ b/frontend/styles/components/tool/map.scss
@@ -182,7 +182,7 @@
 
 .c-map-footer {
   position: absolute;
-  bottom: 20px;
+  bottom: 23px;
   z-index: $z-leaflet-above-panes;
   width: 100%;
 }
